--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@ label { display: block; margin-bottom: 6px; font-weight: 600; color: #333; }
   <select id="faqSelect" onchange="renderFAQContent()">
     <option value="">선택해주세요</option>
     <option value="logistics">상황 1: 고객이 악의적으로 언어로 비방하거나 모욕하여 정상적인 소통이 불가능할 경우, 아래의 안내 문구를 참고하여 예의 있게 통화를 종료하시기 바랍니다.</option>
+    <option value="freegifts">상황2: 사은품도 가격보장 해달라고 요구하는 경우, 아래의 예시 멘트를 참고 부탁드립니다. </option>
   </select>
   <div id="faqContent" style="margin-top:15px;"></div>
 </div>
@@ -137,8 +138,16 @@ label { display: block; margin-bottom: 6px; font-weight: 600; color: #333; }
 
 // FAQ 数据
 const faqData = {
-  logistics: "참고 안내 문구: X님, 저희는 고객님의 문제를 해결해 드리길 진심으로 원하지만, 지속적인 욕설 등 비문명적인 언행으로 인해 정상적인 상담이 어려운 점 양해 부탁드립니다. 다른 고객님의 대기 시간을 고려하여 현재 상담을 종료하겠습니다.추후 제품 사용이나 기술 문의와 관련하여 상담을 원하실 경우, 다시 연락해주시기 바랍니다. 이해해 주셔서 감사합니다."
+  logistics: `참고 안내 문구: 
+X님, 저희는 고객님의 문제를 해결해 드리길 진심으로 원하지만, 지속적인 욕설 등 비문명적인 언행으로 인해 정상적인 상담이 어려운 점 양해 부탁드립니다. 다른 고객님의 대기 시간을 고려하여 현재 상담을 종료하겠습니다. 추후 제품 사용이나 기술 문의와 관련하여 상담을 원하실 경우, 다시 연락해주시기 바랍니다. 이해해 주셔서 감사합니다.`,
+  
+  freegifts: `응대 예시 멘트 1:
+고객님의 요청은 충분히 이해합니다. 다만 가격보장 기간 내, 동일 상품에 대하여 판매자 공식 가격 인하로 인해 발생한 차액만 가격보장이 적용됩니다. 안타깝게도, 사은품은 가격보장 대상이 아닙니다. 양해 부탁드립니다.
+
+응대 예시 멘트 2:
+고객님의 마음 충분히 이해합니다. 사은품은 행사 기간 동안 구매한 주문에 한하여 제공되며, 수량이 제한되어 있어 선착순으로 지급됩니다. 따라서 안타깝게도 별도의 사은품 발송은 어렵습니다. 진심으로 죄송합니다. 양해 부탁드립니다.`
 };
+
 
 // 异常处理方案数据
 const exceptionData = {
